# EserciziCG

./: EserciziCG.code-workspace  README.md
A01CG/: A01.cpp  CMakeLists.txt  figure.hpp
A02CG/: A02.cpp  CMakeLists.txt  transforms.hpp
A03CG/: A03.cpp  CMakeLists.txt  cameras.hpp
A04CG/: A04.cpp  CMakeLists.txt  WVP.hpp
A05CG/: A05.cpp  CMakeLists.txt  Mesh.hpp
A06CG/: A06.cpp  CMakeLists.txt
A06CG/shaders/: ShaderFrag.spv
A07CG/: CMakeLists.txt
A08CG/: A08.cpp  CMakeLists.txt
A08CG/shaders/: ToonFrag.spv  Vert.spv
A09CG/: A09.cpp  CMakeLists.txt  Mesh.hpp
A10CG/: A10.cpp  CMakeLists.txt
